force-app/main/default/objects/Training_Module__c/Training_Module__c.object-meta.xml
<CustomObject>
    <label>Training Module</label>
    <nameField>
        <label>Training Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>