force-app/main/default/objects/Training_Module__c/fields/Is_Answer_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Answer_Correct__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Rep_Answer__c)),
  FALSE,
  TEXT(Rep_Answer__c) = TEXT(Correct_Answer__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Answer Correct?</label>
    <type>Checkbox</type>
</CustomField>