force-app/main/default/objects/Training_Module__c/fields/Option_B__c.field-meta.xml
<CustomField>
    <fullName>Option_B__c</fullName>
    <label>Option B</label>
    <length>200</length>
    <type>Text</type>
</CustomField>