force-app/main/default/objects/Training_Module__c/fields/Option_C__c.field-meta.xml
<CustomField>
    <fullName>Option_C__c</fullName>
    <label>Option C</label>
    <length>200</length>
    <type>Text</type>
</CustomField>