force-app/main/default/objects/Training_Module__c/fields/Option_D__c.field-meta.xml
<CustomField>
    <fullName>Option_D__c</fullName>
    <label>Option D</label>
    <length>200</length>
    <type>Text</type>
</CustomField>