force-app/main/default/objects/Training_Module__c/fields/Quiz_Question__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Question__c</fullName>
    <label>Quiz Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>