force-app/main/default/objects/Training_Module__c/validationRules/VR1_Block_completion_without_correct.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_Block_completion_without_correct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Completed__c, NOT(Is_Answer_Correct__c))</errorConditionFormula>
    <errorMessage>You can’t mark this module complete unless the correct answer is selected.</errorMessage>
</ValidationRule>