force-app/main/default/objects/Training_Module__c/validationRules/VR2_Require_an_answer_if_completing.validationRule-meta.xml
<ValidationRule>
    <fullName>VR2_Require_an_answer_if_completing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Completed__c, ISBLANK(TEXT(Rep_Answer__c)))</errorConditionFormula>
    <errorMessage>Please select an answer before completing.</errorMessage>
</ValidationRule>